<resources>
    <string name="app_name">拼圖趣</string>

    <string name="title_game_name">拼圖趣</string>
    <string name="start_button">Start</string>
    <string name="account_button">History</string>
    <string name="remain_money_text">n</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_instruction">
        遊戲玩法：\n
        Jett有一天發現風景照都缺了一塊！\n請觀察Target圖中所缺失的部分，並切換到Quiz模式找出缺失的部分
        \n\n
        正確：獲得兩分\n
        錯誤：倒扣一分\n
        \n\n
        請在六十秒內努力的將照片們都恢復原狀吧！
    </string>

    <string name="achieve_instruction_common">
        試水溫：總共遊玩1次
        \n\n新手：總共遊玩10次
        \n\n駕輕就熟：總共遊玩50次
        \n\n老手：總共遊玩100次
        \n\n遊戲成癮者：總共遊玩200次
    </string>

    <string name="achieve_instruction_common2">
        低消：總共消費50元
        \n\n半張小朋友：總共消費500元
        \n\n好野人：總共消費1000元
        \n\n土豪：總共消費2000元
    </string>

    <string name="achieve_instruction_private">
        新手入門：獲得3-5分
        \n\n漸入佳境：獲得6-9分
        \n\n老鳥風範：獲得10-19分
        \n\n隱士高人：獲得20分以上
    </string>

    <string name="score">Score</string>
    <string name="URL">http://ba33b5ee.ngrok.io/</string>
    <!--<string name="URL">http://192.168.52.130:8000/</string>-->

</resources>
