<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ExplainAchieveFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:text="拼圖成就"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expPrivateAchieveTitleTextView" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.65999997"/>
    <TextView
            android:text="共同成就"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expCommonAchieveTitleTextView" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.16000003"/>
    <TextView
            android:text="成　就"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expAchieveTitleTextView" android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.050000012"/>
    <TextView
            android:text="@string/achieve_instruction_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expCommonAchieveTextView" android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/expCommonAchieveTitleTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/expCommonAchieveTitleTextView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/expPrivateAchieveTitleTextView"/>
    <TextView
            android:text="@string/achieve_instruction_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expCommonAchieveTextView3" android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/expPrivateAchieveTitleTextView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/expPrivateAchieveTitleTextView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/achieve_instruction_common2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expCommonAchieveTextView2" android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/expCommonAchieveTitleTextView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/expPrivateAchieveTitleTextView"/>
</android.support.constraint.ConstraintLayout>