<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".GameTitle">

        <!-- TODO: Update blank fragment layout -->

        <TextView
                android:text="@string/title_game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gameTitleTextView" android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.17000002"/>
        <Button
                android:text="@string/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="105dp"
                app:layout_constraintTop_toBottomOf="@+id/showUserNameTextView"/>
        <Button
                android:text="@string/account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accountButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.75"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/achieveButton"/>
        <TextView
                android:text="@string/remain_money_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moneyTextView" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/accountButton"
                android:textSize="24sp"/>
        <Button
                android:text="Achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/achieveButton" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/startButton" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="我是誰"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/showUserNameTextView" android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/gameTitleTextView"/>
        <Button
                android:text="Log Out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logoutButton" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.054" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.965"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logoutProgressBar"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"/>
        <Button
                android:text="Shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shopButton"
                app:layout_constraintTop_toTopOf="@+id/accountButton" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.25" app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/puzzle"
                android:id="@+id/gameTitleImageView" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/gameTitleTextView"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/clock"
                android:id="@+id/itemImageView1"
                app:layout_constraintTop_toBottomOf="@+id/showUserNameTextView" android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@+id/itemImageView2" android:layout_marginEnd="8dp"
                android:alpha="0.3"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/shield"
                android:id="@+id/itemImageView2"
                app:layout_constraintTop_toTopOf="@+id/itemImageView1"
                app:layout_constraintEnd_toStartOf="@+id/itemImageView3" android:layout_marginEnd="8dp"
                android:alpha="0.3"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/relic"
                android:id="@+id/itemImageView3"
                app:layout_constraintTop_toTopOf="@+id/itemImageView1"
                app:layout_constraintEnd_toStartOf="@+id/itemImageView4" android:layout_marginEnd="8dp"
                android:alpha="0.3"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/glasses"
                android:id="@+id/itemImageView4"
                app:layout_constraintTop_toTopOf="@+id/itemImageView1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.77" app:layout_constraintEnd_toEndOf="parent"
                android:alpha="0.3" android:layout_marginStart="1dp"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemNumTextView1" android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/itemImageView1"
                app:layout_constraintEnd_toEndOf="@+id/itemImageView1"
                app:layout_constraintTop_toBottomOf="@+id/itemImageView1"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemNumTextView2" android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/itemImageView2"
                app:layout_constraintStart_toStartOf="@+id/itemImageView2"
                app:layout_constraintEnd_toEndOf="@+id/itemImageView2"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemNumTextView3" android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/itemImageView3"
                app:layout_constraintStart_toStartOf="@+id/itemImageView3"
                app:layout_constraintEnd_toEndOf="@+id/itemImageView3"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemNumTextView4" android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/itemImageView4"
                app:layout_constraintStart_toStartOf="@+id/itemImageView4"
                app:layout_constraintEnd_toEndOf="@+id/itemImageView4"/>
        <TextView
                android:text="Item : "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gameTitleItemTextView" app:layout_constraintEnd_toStartOf="@+id/itemImageView1"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/itemImageView1"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expEntryTextView" android:textSize="24sp"
                android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/startButton"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@+id/startButton"/>
        <TextView
                android:text="?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expEntryTextView2" android:textSize="24sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@+id/achieveButton"
                app:layout_constraintStart_toEndOf="@+id/achieveButton" android:layout_marginStart="4dp"/>
        <TextView
                android:text="-10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gameTitlePriceTextView" app:layout_constraintStart_toEndOf="@+id/startButton"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@+id/startButton"
                app:layout_constraintBottom_toBottomOf="@+id/startButton"
                android:textColor="@android:color/holo_red_dark"/>
        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp" app:srcCompat="@drawable/coin"
                android:id="@+id/coinImageView" app:layout_constraintStart_toEndOf="@+id/gameTitlePriceTextView"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@+id/gameTitlePriceTextView"
                app:layout_constraintBottom_toBottomOf="@+id/gameTitlePriceTextView"/>
        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp" app:srcCompat="@drawable/coin"
                android:id="@+id/coinImageView2"
                app:layout_constraintStart_toEndOf="@+id/moneyTextView"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/moneyTextView"
                app:layout_constraintTop_toTopOf="@+id/moneyTextView"/>
    </android.support.constraint.ConstraintLayout>
</layout>